# genvi

./: .gitignore  .markdownlint.json  .pre-commit-config.yaml  ABOUT.md  LICENSE  MANIFEST.in  Makefile  README.md  bump.py  bump_test.py  freezenuts.py  freezenuts_test.py  is_virtualenv.py  is_virtualenv_test.py  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.out  requirements.txt  setup.cfg
.github/: SECURITY.md  dependabot.yml  labels.yml  release-drafter.yml  variables.env
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md  question.md
.github/actions/setup-variables/: action.yml
.github/workflows/: ci.yml  define-labels.yml  label-sync.yml  labeling.yml  release-drafter.yml  upgrade.yml
magic/: __main__.py  conjure.sh
magic/console/: config.py  config_test.py  core.py  core_test.py  executable.py  executable_test.py
magic/tests/: fake_directory.py
magic/utils/: config.py  config_test.py  consts.py  errors.py  files.py  files_test.py  readme_template.md
myproject/: __init__.py  __main__.py
myproject/animals/: animal.py  animal_test.py  blue_whale.py  blue_whale_test.py  common_viper.py  common_viper_test.py  human.py
myproject/console/: core.py  executable.py  executable_test.py  reporting.py  settings.py  settings_test.py
tests/magic/: conftest.py  fake_directory.py
tests/magic/console/: test_config.py  test_core.py
tests/magic/utils/: test_files.py
tests/myproject/animals/: test_animal.py  test_blue_whale.py  test_common_viper.py  test_human.py
tests/myproject/console/: test_core.py
tests/tools/bump/: test_core.py
tests/tools/freezenuts/: test_core.py
tests/tools/perkele/default/: test_it.py
tests/tools/perkele/docker/: test_it.py
tests/tools/perkele/failure_handler/: test_it.py
tests/tools/perkele/httpd/: test_it.py
tests/tools/perkele/postgresql/: test_it.py
tests/tools/perkele/pulseaudio/: pulseaudio.out.service  test_it.py
tests/tools/perkele/reap/: test_it.py
tests/tools/perkele/redis/: test_it.py
tests/tools/perkele/simple/: simple.service  test_it.py
tests/tools/perkele/snap/: test_it.py
tests/tools/perkele/syntax/: backslashes.out.ini  no-value.ini  semicolons.out.service  test_it.py
tests/tools/perkele/timers/: monotonic.out.timer  test_it.py
tests/tools/perkele/ubuntu/: test_it.py
tools/: bump.py  bump_test.py  freezenuts.py  freezenuts_test.py  is_virtualenv_test.py
tools/bump/: __main__.py  core.py  core_test.py
tools/bump/tests/: test_core.py
tools/freezenuts/: __main__.py  core.py  core_test.py
tools/freezenuts/tests/: test_core.py
tools/is_virtualenv/: __main__.py  core.py  core_test.py
tools/perkele/: types.py  unit_parser.py  utils.py  utils_test.py
tools/perkele/tests/: utils.py
tools/perkele/tests/default/: test_it.py
tools/perkele/tests/docker/: docker.out.service  test_it.py
tools/perkele/tests/failure_handler/: failure-handler@.in.service  failure-handler@.out.service  test_it.py
tools/perkele/tests/httpd/: httpd.in.service  httpd.out.service  test_it.py
tools/perkele/tests/postgresql/: postgresql@12-main.out.service  test_it.py
tools/perkele/tests/pulseaudio/: test_it.py
tools/perkele/tests/reap/: test_it.py
tools/perkele/tests/redis/: redis-server.out.service  test_it.py
tools/perkele/tests/simple/: test_it.py
tools/perkele/tests/snap/: snap-slack-64.mount  test_it.py
tools/perkele/tests/syntax/: backslashes-commented.in.ini  backslashes-commented.out.ini  backslashes.in.ini  backslashes.out.ini  duplicate-directive.in.service  duplicate-directive.out.service  list-reset.in.service  list-reset.out.service  quotes.in.service  quotes.out.service  semicolons.in.service  test_it.py
tools/perkele/tests/timers/: monotonic.in.timer  realtime.in.timer  realtime.out.timer  test_it.py
tools/perkele/tests/ubuntu/: test_it.py
